[package]
name = "candle-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { version = "0.4", features = ["cuda"] }
candle-nn = { version = "0.4" }
candle-datasets = "0.4"
hf-hub = { version = "0.3", features = ["tokio"] }
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1"
